[project]
name = "trax-playground"
version = "0.1.0"
description = ""
authors = [
    {name = "Oleg Salionov",email = "salionov@drom.ru"}
]
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "trax (>=1.4.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
